# tincapp

./: .gitignore  README.md  build.gradle  changelog.md  contributors.md  gradle.properties  readme.md  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/c/: 0001-tincctl-restrict-umask-argument-for-FORTIFY.patch  exec.c
app/src/main/java/org/pacien/tincapp/activities/: BaseActivity.java  BaseActivity.kt  BaseDialogFragment.kt  BaseFragment.kt  ConfigureActivity.kt  LaunchActivity.kt  PromptActivity.kt  StartActivity.java  StartActivity.kt  StatusActivity.kt  ViewLogActivity.kt
app/src/main/java/org/pacien/tincapp/activities/common/: FragmentListPagerAdapter.kt  ProgressModal.kt  RecentCrashHandler.kt  SelfRefreshingLiveData.kt
app/src/main/java/org/pacien/tincapp/activities/configure/: ConfigurationAccessServerFragment.kt  ConfigurationFtpServerFragment.kt  ConfigureActivity.kt  PathInfoFragment.kt  ToolsFragment.kt
app/src/main/java/org/pacien/tincapp/activities/start/: ConnectionStarter.kt  ErrorNotificationFragment.kt  NetworkListFragment.kt  NetworkListLiveData.kt  NetworkListViewModel.kt  StartActivity.kt
app/src/main/java/org/pacien/tincapp/activities/status/: NetworkInfoFragment.kt  StatusActivity.kt  StatusFragmentPagerAdapter.kt  VpnInterfaceConfigurationFormatter.kt
app/src/main/java/org/pacien/tincapp/activities/viewlog/: LogLiveData.kt  LogViewModel.kt  ViewLogActivity.kt
app/src/main/java/org/pacien/tincapp/commands/: Command.java  Command.kt  Executor.java  Executor.kt  PermissionFixer.java  PermissionFixer.kt  Tinc.java  Tinc.kt  TincApp.kt  Tincd.java  Tincd.kt
app/src/main/java/org/pacien/tincapp/context/: App.kt  AppInfo.java  AppInfo.kt  AppLogger.kt  AppNotificationManager.kt  AppPaths.java  AppPaths.kt  ConfigurationDirectoryMigrator.kt  CrashRecorder.kt  StorageMigrator.kt
app/src/main/java/org/pacien/tincapp/data/: CidrAddress.kt  TincConfiguration.kt  VpnInterfaceConfiguration.kt
app/src/main/java/org/pacien/tincapp/extensions/: Android.kt  ApacheConfiguration.kt  Java.kt  ListViewExtensions.kt  View.kt  VpnServiceBuilder.kt
app/src/main/java/org/pacien/tincapp/intent/: Actions.kt  BroadcastMapper.kt  SimpleBroadcastReceiver.kt
app/src/main/java/org/pacien/tincapp/intent/action/: Actions.kt
app/src/main/java/org/pacien/tincapp/service/: ConfigurationAccessService.kt  ConfigurationFtpService.kt  ConnectivityChangeReceiver.kt  TincVpnService.java  TincVpnService.kt  VpnInterfaceConfiguraton.kt  VpnInterfaceConfigurator.java  VpnInterfaceConfigurator.kt  VpnServiceBuilderExtensions.kt
app/src/main/java/org/pacien/tincapp/util/: Function.java
app/src/main/java/org/pacien/tincapp/utils/: AndroidExtensions.kt  FileObserver.kt  Files.kt  Functions.kt  PemUtils.kt  PendingIntentUtils.kt  ProgressModal.kt  TincKeyring.kt
app/src/main/kotlin/org/pacien/tincapp/activities/: BaseActivity.kt  StartActivity.kt
app/src/main/kotlin/org/pacien/tincapp/commands/: Command.kt
app/src/main/kotlin/org/pacien/tincapp/context/: AppLogger.kt
app/src/main/kotlin/org/pacien/tincapp/data/: VpnInterfaceConfiguration.kt
app/src/main/kotlin/org/pacien/tincapp/extensions/: ApacheConfiguration.kt
app/src/main/kotlin/org/pacien/tincapp/utils/: PemUtils.kt
app/src/main/play/: contact-website.txt  contactEmail
app/src/main/play/en-US/: whatsnew
app/src/main/play/en-US/listing/: fulldescription
app/src/main/play/listings/en-US/: full-description.txt  short-description.txt  title.txt
app/src/main/res/drawable/: horizontal_line.xml  ic_baseline_folder_open_primary_24dp.xml  ic_build_primary_24dp.xml  ic_help_primary_24dp.xml  ic_launcher_foreground.xml  ic_link_off_primary_24dp.xml  ic_pause_circle_filled_primary_24dp.xml  ic_pause_circle_outline_primary_24dp.xml  ic_photo_camera_primary_24dp.xml  ic_receipt_primary_24dp.xml  ic_share_primary_24dp.xml  ic_stop_primary_24dp.xml  ic_warning_primary_24dp.xml
app/src/main/res/drawable-v24/: ic_launcher_background.xml
app/src/main/res/layout/: base.xml  base_activity.xml  common_progress_dialog.xml  configure_activity.xml  configure_tools_configuration_access_fragment.xml  configure_tools_dialog_encrypt_decrypt_keys.xml  configure_tools_dialog_network_generate.xml  configure_tools_dialog_network_join.xml  configure_tools_fragment.xml  configure_tools_path_info_fragment.xml  dialog_decrypt_keys.xml  dialog_encrypt_decrypt_keys.xml  dialog_frame.xml  dialog_network_generate.xml  dialog_network_join.xml  dialog_node_details.xml  dialog_text_monopsace.xml  fragment_list_item.xml  fragment_list_view.xml  fragment_network_list_empty_placeholder.xml  fragment_network_list_header.xml  fragment_network_status_header.xml  page_configure.xml  page_start.xml  page_status.xml  page_viewlog.xml  start_activity.xml  start_error_notification.xml  start_network_list.xml  start_network_list_header.xml  start_network_list_item.xml  status_activity.xml  status_activity_list_header.xml  status_network_info_fragment.xml  status_node_info_dialog.xml  status_node_list.xml  status_node_list_fragment.xml  status_node_list_item.xml  status_subnet_list_fragment.xml  status_subnet_list_item.xml  (+1 more)
app/src/main/res/menu/: menu_base.xml  menu_conf.xml  menu_start.xml  menu_status.xml  menu_viewlog.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/raw/: network.conf
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-w600dp/: dimens.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/values-w960dp/: dimens.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
